@@ -29,7 +29,7 @@ APPS=app_dial.so app_playback.so app_voicemail.so app_directory.so app_mp3.so\
      app_dumpchan.so app_waitforsilence.so app_while.so app_setrdnis.so \
      app_md5.so app_readfile.so app_chanspy.so app_settransfercapability.so \
      app_dictate.so app_externalivr.so app_directed_pickup.so \
-     app_mixmonitor.so
+     app_mixmonitor.so app_stack.so
 
 #
 # Obsolete things...
